--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -11,7 +11,7 @@ import FeatherIcon from '../components/FeatherIcon.astro';
 	<head>
 		<BaseHead title={`404 Not Found | ${SITE_TITLE}`} description={SITE_DESCRIPTION} />
 	</head>
-	<body class="bg-stone-50 text-stone-900 min-h-screen flex flex-col">
+	<body class="bg-marry text-stone-900 min-h-screen flex flex-col">
 		<Header />
 		<main class="flex-1 w-full">
 			<div class="relative">
