--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body class="bg-stone-50 text-stone-900 min-h-screen flex flex-col">
+	<body class="bg-marry text-stone-900 min-h-screen flex flex-col">
 		<Header />
 		<main class="flex-1 w-full">
 			<!-- Hero Section -->
@@ -30,8 +30,6 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			<!-- Author Bio -->
 			<AuthorBio />
 
-			<!-- Newsletter Signup -->
-			<NewsletterSignup />
 		</main>
 		<Footer />
 	</body>
