--- a/src/pages/info.astro
+++ b/src/pages/info.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/BasicPage.astro';
 ---
 
 <Layout
-	title="Algemene informatie"
+	title="Over het werk"
 	description="MIJN WERK BESTAAT UIT PROJECTEN die ingaan op de context van een specifieke situatie"
 	heroImage="/de_baak_dansvloer.jpg"
 >
@@ -19,4 +19,568 @@ import Layout from '../layouts/BasicPage.astro';
 		Vanuit het gegeven dat het werk een funktionele kant heeft, is het dus zo dat het
 		de openbare of publieke ruimte nodig heeft om te kunnen zijn wat het is.
 	</p>
+
+	<section class="prose">
+		<h2>Curriculum Vitae</h2>
+			<ul>
+				<li>Marry Overtoom</li>
+				<li>Geboren in Amsterdam</li>
+				<li>Woont en werkt in Ede, Arnhem</li>
+			</ul>
+		<h3>Opdrachten / projecten openbare ruimte</h3>
+		<table>
+			<tbody><tr>
+				<td>2020-2021</td>
+				<td> Gemeente Schiedam</td>
+			</tr>
+			<tr>
+				<td>2019-2021</td>
+				<td> Gemeente Utrecht</td>
+			</tr>
+			<tr>
+				<td>2019</td>
+				<td>Gemeente Ede</td>
+			</tr>
+			<tr>
+				<td>2017</td>
+				<td>Gemeente Ede(schetsontwerp)</td>
+			</tr>
+			<tr>
+				<td>2016</td>
+				<td> Gemeente Den Dungen (ideeënschets)</td>
+			</tr>
+			<tr>
+				<td>2014</td>
+				<td> Masterplan centrum Zwolle</td>
+			</tr>
+			<tr>
+				<td>2014</td>
+				<td> Centrum Schijndel (ideeënschets)</td>
+			</tr>
+			<tr>
+				<td>2010-2011</td>
+				<td> Gemeente Hoogeveen</td>
+			</tr>
+			<tr>
+				<td>2009</td>
+				<td> Gemeente Schiedam (schetsontwerp)</td>
+			</tr>
+			<tr>
+				<td>2009</td>
+				<td> Gemeente Duiven (schetsopdracht)</td>
+			</tr>
+			<tr>
+				<td>2008</td>
+				<td> Gemeente Ede</td>
+			</tr>
+			<tr>
+				<td>2007</td>
+				<td><span class="caps">CBKG</span>elderland, Het Nationale Park Hoge Veluwe, Kröller-Müller Museum</td>
+			</tr>
+			<tr>
+				<td>2006</td>
+				<td>Gemeente Veenendaal</td>
+			</tr>
+			<tr>
+				<td>2005</td>
+				<td>Gemeente Veenendaal (schetsopdracht)</td>
+			</tr>
+			<tr>
+				<td>2005</td>
+				<td>Centrum Beeldende Kunst Gelderland (<span class="caps">CBKG</span>)</td>
+			</tr>
+			<tr>
+				<td>2004</td>
+				<td>Provincie Gelderland EZ, Gemeente Renkum</td>
+			</tr>
+			<tr>
+				<td>2004</td>
+				<td>Gemeente Ede</td>
+			</tr>
+			<tr>
+				<td>2003-2004</td>
+				<td>Gemeente Barendrecht</td>
+			</tr>
+			<tr>
+				<td>2003</td>
+				<td>Gemeente Ede</td>
+			</tr>
+			<tr>
+				<td>2002</td>
+				<td>Gemeente Maastricht (schetsopdracht)</td>
+			</tr>
+			<tr>
+				<td>2001</td>
+				<td>De Baak Driebergen</td>
+			</tr>
+			<tr>
+				<td>1999</td>
+				<td>Dienst Landelijk Gebied Semslinie (schetsopdracht)</td>
+			</tr>
+			<tr>
+				<td>1998</td>
+				<td>Rijksgebouwendienst Den Haag (schetsopdracht)</td>
+			</tr>
+			<tr>
+				<td>1997</td>
+				<td>Kunstcentrum Flevoland</td>
+			</tr>
+			<tr>
+				<td>1997</td>
+				<td><span class="caps">NBKS</span>, Breda (studieopdracht)</td>
+			</tr>
+			<tr>
+				<td>1996</td>
+				<td>Gemeente Tilburg</td>
+			</tr>
+			<tr>
+				<td>1995</td>
+				<td>Gemeente Breda (schetsopdracht)</td>
+			</tr>
+			<tr>
+				<td>1995</td>
+				<td>Gemeente Tilburg (schetsopdracht)</td>
+			</tr>
+			<tr>
+				<td>1994</td>
+				<td>Gemeente Arnhem (schetsopdracht)</td>
+			</tr>
+			<tr>
+				<td>1994</td>
+				<td>Stichting Trechter 5 Goes</td>
+			</tr>
+			<tr>
+				<td>1992</td>
+				<td>Gemeente Arnhem (schetsopdracht)</td>
+			</tr>
+			<tr>
+				<td>1988</td>
+				<td>Gemeente Rheden</td>
+			</tr>
+			</tbody>
+		</table>
+		<h3>Tentoonstellingen</h3>
+		<table>
+				<tbody><tr>
+					<td>2017-2018</td>
+					<td> ‘De Hes in Oosterbeek’, Raadsgalerij Oosterbeek</td>
+				</tr>
+				<tr>
+					<td>2017</td>
+					<td> ‘Ijsselbiënnale NatLab’, Zutphen</td>
+				</tr>
+				<tr>
+					<td>2017</td>
+					<td> ‘Showmeyourbutton’ Wallgallery, (i.h.k.v.Art) Rotterdam</td>
+				</tr>
+				<tr>
+					<td>2017</td>
+					<td> ‘Klei-Bak-Steen’, Museum Nairac, Barneveld</td>
+				</tr>
+				<tr>
+					<td>2015</td>
+					<td> ‘Keihard Klei’, Dudok, Arnhem</td>
+				</tr>
+				<tr>
+					<td>2014</td>
+					<td> ‘Portiersloge solotent.’, <span class="caps">CODE</span> <span class="caps">ROOD</span>, Arnhem</td>
+				</tr>
+				<tr>
+					<td>2014</td>
+					<td> ‘De Vergelding’, Circa…dit, benefiettent., keramiek, Arnhem</td>
+				</tr>
+				<tr>
+					<td>2013</td>
+					<td> ‘HOE=HET NU 2013’, <span class="caps">ACEC</span>-gebouw, Apeldoorn</td>
+				</tr>
+				<tr>
+					<td>2013</td>
+					<td> ‘Tacan 2’, Buitenplaats Koningsweg, Arnhem</td>
+				</tr>
+				<tr>
+					<td>2013</td>
+					<td> Drulon, Du Berry, Frankrijk, beeldentuin</td>
+				</tr>
+				<tr>
+					<td>2012</td>
+					<td> Buitenplaats Koningsweg, minitentoonstellng, stichting G.A.N.G.</td>
+				</tr>
+				<tr>
+					<td>2011</td>
+					<td> ‘De Kleicub’, atelier van Nunen, Keramiek Peter Krynen, Arnhem</td>
+				</tr>
+				<tr>
+					<td>2008</td>
+					<td>‘Wandelgeesten’, presentatie Kröller-Müller Museum, Park Hoge Veluwe, Internationale Triënnale Apeldoorn</td>
+				</tr>
+				<tr>
+					<td>2007</td>
+					<td>presentatie wandelproject Recreatiebeurs <span class="caps">VBT</span></td>
+				</tr>
+				<tr>
+					<td>2006</td>
+					<td>‘Kunst Werkt’, Gelderland Biënnale, Museum het Valkhof te Nijmegen</td>
+				</tr>
+				<tr>
+					<td>2006</td>
+					<td>‘Insight/ Inside’, De Baak, Driebergen</td>
+				</tr>
+				<tr>
+					<td>2004</td>
+					<td>‘Lilliputh’, Melksalon Arnhem</td>
+				</tr>
+				<tr>
+					<td>2003</td>
+					<td>‘Blindgangers en Voetzoekers’, Voormalig Gerechtsgebouw, Utrecht</td>
+				</tr>
+				<tr>
+					<td>2002</td>
+					<td>‘Natuurlijk, natuurlijk’, Gelderse Triënnale, Apeldoorn</td>
+				</tr>
+				<tr>
+					<td>2002</td>
+					<td>‘Manage to dance’,tentoonstelling De Baak Driebergen</td>
+				</tr>
+				<tr>
+					<td>2002</td>
+					<td>‘SWOP-A’, diverse locaties, Arnhem</td>
+				</tr>
+				<tr>
+					<td>2001</td>
+					<td>‘Treasure Bags’, wachthuisjesproject Veluwe</td>
+				</tr>
+				<tr>
+					<td>2000</td>
+					<td>‘Het Gekke Huis’, ziekenhuisterrein Gelderse Roos, Wolfheze</td>
+				</tr>
+				<tr>
+					<td>1999</td>
+					<td>‘De Soep en de Wolken’, Park Berg en Bos, Apeldoorn</td>
+				</tr>
+				<tr>
+					<td>1999</td>
+					<td>‘Homeless’, FR-<span class="caps">ESP</span>, Mota Gallery, Londen</td>
+				</tr>
+				<tr>
+					<td>1998</td>
+					<td>‘Time Fiction, Capelli/ Museum voor Moderne Kunst, Arnhem</td>
+				</tr>
+				<tr>
+					<td>1998</td>
+					<td>tent. Wilma Sommers, Archipel, Apeldoorn</td>
+				</tr>
+				<tr>
+					<td>1998</td>
+					<td>‘Kunst in de openbare ruimte’, Faxx, Tilburg</td>
+				</tr>
+				<tr>
+					<td>1997</td>
+					<td>‘ELP’,  Niggendijker, Groningen</td>
+				</tr>
+				<tr>
+					<td>1997</td>
+					<td>‘50/50/50/50’, Answer Machine Project, Liverpool, Barcelona</td>
+				</tr>
+				<tr>
+					<td>1997</td>
+					<td>Lezing eigen werk, Onderlangs, Amsterdam</td>
+				</tr>
+				<tr>
+					<td>1997</td>
+					<td>‘YARD.’, stichting Hooghuis, Arnhem</td>
+				</tr>
+				<tr>
+					<td>1997</td>
+					<td>‘Benaderingen’, Brabant – in Opdracht, <span class="caps">NBKS</span>, Breda</td>
+				</tr>
+				<tr>
+					<td>1997</td>
+					<td>‘Civic Fuel’, Centrum voor Beeldende Kunst, Rotterdam</td>
+				</tr>
+				<tr>
+					<td>1995</td>
+					<td>pres. ‘Crown Jewel’ 2, Galerie Reuten, Amsterdam</td>
+				</tr>
+				<tr>
+					<td>1996</td>
+					<td> ‘Telefoonstraat Twintig’, Tilburg</td>
+				</tr>
+				<tr>
+					<td>1995</td>
+					<td>‘Review/Preview’, Oranjerie, Rotterdam</td>
+				</tr>
+				<tr>
+					<td>1995</td>
+					<td>pres. ‘Crown Jewel’, Galerie Reuten, Amsterdam</td>
+				</tr>
+				<tr>
+					<td>1995</td>
+					<td>‘50/50/50/50’, Answer Machine Project, Londen, Liverpool, Barcelona</td>
+				</tr>
+				<tr>
+					<td>1995</td>
+					<td>‘Observatorium’, De Vaalserberg, Rotterdam</td>
+				</tr>
+				<tr>
+					<td>1994</td>
+					<td>‘Framework &amp; Invitation’,  Zomerbeelden, Goes</td>
+				</tr>
+				<tr>
+					<td>1994</td>
+					<td>‘Models &amp; Tours’, Oranjerie, Rotterdam</td>
+				</tr>
+				<tr>
+					<td>1993</td>
+					<td>‘Hebzucht’, Verheyden Studio’s, Arnhem</td>
+				</tr>
+				<tr>
+					<td>1993</td>
+					<td>‘Erratum’ (De Receptie VI), Stichting Still, Archipel, Apeldoorn</td>
+				</tr>
+				<tr>
+					<td>1993</td>
+					<td>Tracé, atelierroute, Arnhem</td>
+				</tr>
+				<tr>
+					<td>1993</td>
+					<td>‘Vrij Spel ‘, Arnhems Gemeentemuseum, Arnhem</td>
+				</tr>
+				<tr>
+					<td>1993</td>
+					<td>Een keuze van Kees Goudzwaard, Artotheek, Den Haag</td>
+				</tr>
+				<tr>
+					<td>1992</td>
+					<td>Projekt 381B, Stichting Still, Rotterdam</td>
+				</tr>
+				<tr>
+					<td>1990</td>
+					<td>Provincie Gelderland, Beeldende Kunst 1988-1990, Arnhem</td>
+				</tr>
+				<tr>
+					<td>1990</td>
+					<td>‘Te Gast ‘, Arnhems Gemeentemuseum, Arnhem</td>
+				</tr>
+				<tr>
+					<td>1990</td>
+					<td>‘Eaves Dropping’, solotentoonstelling, Hooghuis, Arnhem</td>
+				</tr>
+				<tr>
+					<td>1989</td>
+					<td> Esplanada Exposities, Eindhoven</td>
+				</tr>
+				<tr>
+					<td>1988</td>
+					<td>Hooghuis, solotentoonstelling, Arnhem</td>
+				</tr>
+				<tr>
+					<td>1987</td>
+					<td>De Gele Rijder, Arnhem</td>
+				</tr>
+				<tr>
+					<td>1986</td>
+					<td>Kleine Skulpturen, Tilburg</td>
+				</tr>
+				<tr>
+					<td>1985</td>
+					<td>Installatie, <span class="caps">HCAK</span>, Den Haag</td>
+				</tr>
+				<tr>
+					<td>1994</td>
+					<td>‘A desire for a powerful perception of presence’, Hooghuis, Arnhem</td>
+				</tr>
+				</tbody>
+		</table>
+		<h3>Nevenactiviteiten</h3>
+		<table>
+			<tbody><tr>
+				<td>2017-2021</td>
+				<td> Beheerder H40 Ateliers Arnhems Buiten</td>
+			</tr>
+			<tr>
+				<td>2014</td>
+				<td> Samenstellen kunstenplan Zwolle s.v. Wolf i.s.m. Albert Kliest</td>
+			</tr>
+			<tr>
+				<td>2008-2012</td>
+				<td> lid s.v. Wolf, redactie website</td>
+			</tr>
+			<tr>
+				<td>2005-2010</td>
+				<td>Initiatiefnemer/ curator ‘het Elfbergenpad en de Kunst van Wandelen’</td>
+			</tr>
+			<tr>
+				<td>2000-2008</td>
+				<td>Bestuurslid stichting Wolf-heze</td>
+			</tr>
+			<tr>
+				<td>2000</td>
+				<td>Organisatie tent. ‘ Het Gekke Huis’, Renkum Wolfheze</td>
+			</tr>
+			<tr>
+				<td>1998-2000</td>
+				<td>Bestuurslidlid werkgroep Wonen/Werken/Wolfheze</td>
+			</tr>
+			<tr>
+				<td>1998-2004</td>
+				<td>Lid adviescommissie Beeldende Vormgeving gemeente Nijmegen</td>
+			</tr>
+			<tr>
+				<td>1997</td>
+				<td>Adviseren <span class="caps">SKCG</span> te Arnhem</td>
+			</tr>
+			<tr>
+				<td>1995-1996</td>
+				<td>Organisatie van diverse tentoonstellingen te Rotterdam en Arnhem</td>
+			</tr>
+			<tr>
+				<td>1988-1992</td>
+				<td>Bestuurslid Hooghuis Arnhem</td>
+			</tr>
+			</tbody></table>
+		<h3>Publicaties</h3>
+		<table>
+			<tbody><tr>
+				<td>2012</td>
+				<td>Window of Your Eyes, kunst in de openbare ruimte 2001 – 2012, <span class="caps">CBK</span> Drenthe</td>
+			</tr>
+			<tr>
+				<td>2012</td>
+				<td>Art, a forgotten instrument, Aafke Nijenhuijzen, <span class="caps">ISOCARP</span>, Perm, Rusland</td>
+			</tr>
+			<tr>
+				<td>2011</td>
+				<td>artikel <span class="caps">HEP</span>, Sandra Smets, <span class="caps">NRC</span> Handelsblad</td>
+			</tr>
+			<tr>
+				<td>2011</td>
+				<td>Het Elastisch Perspektief, kunst in Carnisselande, gem. Barendrecht</td>
+			</tr>
+			<tr>
+				<td>2009</td>
+				<td>Nieuwe Beelden in Ede 2001 – 2009, gemeente Ede</td>
+			</tr>
+			<tr>
+				<td>2009</td>
+				<td>Kunst in Veenendaal, wandel- en fietsroute, gemeente Veenendaal</td>
+			</tr>
+			<tr>
+				<td>2009</td>
+				<td>Café Sonore, <span class="caps">VPRO</span> uitzending Radio6, archief oktober Café Sonore</td>
+			</tr>
+			<tr>
+				<td>2009</td>
+				<td>‘Daar buiten vliegt een schaap’, Stg. Wolf i.o.v. gem. Ede</td>
+			</tr>
+			<tr>
+				<td>2008</td>
+				<td>tijdschrift ‘Beeld’, Wandelgeesten, Astrid Tanis</td>
+			</tr>
+			<tr>
+				<td>2008</td>
+				<td>magazine Internationale Triënnale Apeldoorn 2008</td>
+			</tr>
+			<tr>
+				<td>2008</td>
+				<td>‘Wandelgeesten’, Stg.Wolf/ <span class="caps">CBKG</span> i.s.m. Het Nationale Park Hoge Veluwe, Kröller-Müller Museum</td>
+			</tr>
+			<tr>
+				<td>2006</td>
+				<td> De Gelderlander</td>
+			</tr>
+			<tr>
+				<td>2006</td>
+				<td>www.dekunstvanhetwandelen.info</td>
+			</tr>
+			<tr>
+				<td>2006-2008</td>
+				<td> ‘Het Elfbergenpad en de Kunst van het Wandelen’ 5 uitgaven</td>
+			</tr>
+			<tr>
+				<td>2006</td>
+				<td>Scheurkalender Made in Arnhem, The Building</td>
+			</tr>
+			<tr>
+				<td>2005</td>
+				<td>Kunst van de Vrijheid, <span class="caps">MKDO</span>, De Veluwe</td>
+			</tr>
+			<tr>
+				<td>2005</td>
+				<td>Nieuwsbrief Carnisselande (Barendrecht)</td>
+			</tr>
+			<tr>
+				<td>2004-2009</td>
+				<td>www.the-artists.org</td>
+			</tr>
+			<tr>
+				<td>2004</td>
+				<td>www.marryovertoom.info</td>
+			</tr>
+			<tr>
+				<td>2004</td>
+				<td>www.wolf-heze.com</td>
+			</tr>
+			<tr>
+				<td>2002</td>
+				<td>Website IJsberen op de Veluwe/ Wandelen in wording</td>
+			</tr>
+			<tr>
+				<td>2003</td>
+				<td>CD-rom ‘Blindgangers en Voetzoekers’</td>
+			</tr>
+			<tr>
+				<td>2002</td>
+				<td>Publicatie ‘Natuurlijk, natuurlijk’</td>
+			</tr>
+			<tr>
+				<td>2001</td>
+				<td>Architectuur Locaal ‘Het Gekke huis’</td>
+			</tr>
+			<tr>
+				<td>2000</td>
+				<td>Catalogus ‘Het Gekke huis’</td>
+			</tr>
+			<tr>
+				<td>1999</td>
+				<td>‘De Soep en de Wolken’, Beeldenbiënnale Gelderland</td>
+			</tr>
+			<tr>
+				<td>1998</td>
+				<td>‘Time Fiction’, Biënnale Gelderland 1998</td>
+			</tr>
+			<tr>
+				<td>1998</td>
+				<td>Catalogus ‘Telefoonstraat Twintig’</td>
+			</tr>
+			<tr>
+				<td>1997</td>
+				<td>‘Flevolandgevoel’ Kunstcentrum Flevoland</td>
+			</tr>
+			<tr>
+				<td>1997</td>
+				<td>Catalogus ‘Benaderingen’, <span class="caps">NBKS</span></td>
+			</tr>
+			<tr>
+				<td>1996</td>
+				<td>De Groene Amsterdammer</td>
+			</tr>
+			<tr>
+				<td>1995</td>
+				<td>Catalogus 50/50/50/50</td>
+			</tr>
+			<tr>
+				<td>1992</td>
+				<td>Project 381B, Stichting Still</td>
+			</tr>
+			<tr>
+				<td>1990</td>
+				<td>Catalogus Provincie Gelderland</td>
+			</tr>
+			<tr>
+				<td>1990</td>
+				<td>Catalogus ‘Te Gast’</td>
+			</tr>
+			</tbody></table>
+	</section>
+
 </Layout>
