--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -21,7 +21,7 @@ const { title, description, pubDate, updatedDate, heroImage, tags = [], id } = A
 	<head>
 		<BaseHead title={`${title} | ${SITE_TITLE}`} description={description} />
 	</head>
-	<body class="bg-stone-50 text-stone-900 min-h-screen flex flex-col">
+	<body class="bg-marry text-stone-900 min-h-screen flex flex-col">
 		<Header />
 		<main class="flex-1 w-full">
 			<article class="relative">
