--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -101,7 +101,7 @@ const { title, description, pubDate, updatedDate, heroImage, tags = [], id } = A
 											<Image
 												src={BLOG_CONFIG.author.avatar}
 												alt={BLOG_CONFIG.author.name}
-												class="w-full h-full object-cover transition duration-700 group-hover:scale-105"
+												class="grayscale w-full h-full object-cover transition duration-700 group-hover:scale-105"
 											/>
 										</div>
 									</div>
