--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -14,7 +14,7 @@ type Props = CollectionEntry<'blog'>['data'] & {
 	id: string;
 };
 
-const { title, description, pubDate, updatedDate, heroImage, tags = [], id } = Astro.props;
+const { title, description, pubDate, updatedDate, heroImage, tags = [],images = [],videos = [],sounds = [], id } = Astro.props;
 ---
 
 <html lang="en">
